// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Accordeon /> with one item matches with snapshot 1`] = `
.c2 {
  display: block;
  margin: 0;
  width: 100%;
  padding: 1.25rem;
  min-height: 1.875rem;
  box-sizing: border-box;
  overflow: visible;
  background: transparent;
  border: 0.125rem solid #eee;
  border-radius: 0.1875rem;
  color: inherit;
  font: inherit;
  text-align: inherit;
  line-height: normal;
  -webkit-appearance: none;
  cursor: pointer;
  outline: none;
}

.c2[aria-expanded='true'] {
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
}

.c0 {
  margin-bottom: 0rem;
}

.c4 {
  margin-top: 1.875rem;
  margin-bottom: 1.875rem;
}

.c3 {
  box-sizing: border-box;
  visibility: visible;
  overflow: hidden;
  -webkit-flex-basis: NaNrem;
  -ms-flex-preferred-size: NaNrem;
  flex-basis: NaNrem;
  background-color: #f6f6f6;
  border: 0.125rem solid #eee;
  border-top: 0;
  border-bottom-left-radius: 0.1875rem;
  border-bottom-right-radius: 0.1875rem;
  opacity: 1;
  padding: 0 1.875rem;
  -webkit-transition: visibility 0s ease,flex-basis 0.4s ease,opacity 0.4s ease;
  transition: visibility 0s ease,flex-basis 0.4s ease,opacity 0.4s ease;
  -webkit-transition-delay: 0s,0s,0s;
  transition-delay: 0s,0s,0s;
}

.c3[aria-hidden='true'] {
  visibility: hidden;
  opacity: 0;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-transition-delay: 0.4s,0s,0s;
  transition-delay: 0.4s,0s,0s;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

@media (prefers-reduced-motion:reduce) {
  .c3 {
    -webkit-animation: none;
    animation: none;
    -webkit-animation: none;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <button
      aria-expanded={false}
      className="c2"
      onClick={[Function]}
      role="tab"
    >
      Header
    </button>
    <div
      aria-hidden={true}
      className="c3"
    >
      <div
        className="c4"
      >
        Content
      </div>
    </div>
  </div>
</div>
`;

exports[`<Accordeon /> with two items matches with snapshot 1`] = `
Array [
  .c2 {
  display: block;
  margin: 0;
  width: 100%;
  padding: 1.25rem;
  min-height: 1.875rem;
  box-sizing: border-box;
  overflow: visible;
  background: transparent;
  border: 0.125rem solid #eee;
  border-radius: 0.1875rem;
  color: inherit;
  font: inherit;
  text-align: inherit;
  line-height: normal;
  -webkit-appearance: none;
  cursor: pointer;
  outline: none;
}

.c2[aria-expanded='true'] {
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
}

.c4 {
  margin-top: 1.875rem;
  margin-bottom: 1.875rem;
}

.c0 {
  margin-bottom: 0.9375rem;
}

.c3 {
  box-sizing: border-box;
  visibility: visible;
  overflow: hidden;
  -webkit-flex-basis: NaNrem;
  -ms-flex-preferred-size: NaNrem;
  flex-basis: NaNrem;
  background-color: #f6f6f6;
  border: 0.125rem solid #eee;
  border-top: 0;
  border-bottom-left-radius: 0.1875rem;
  border-bottom-right-radius: 0.1875rem;
  opacity: 1;
  padding: 0 1.875rem;
  -webkit-transition: visibility 0s ease,flex-basis 0.4s ease,opacity 0.4s ease;
  transition: visibility 0s ease,flex-basis 0.4s ease,opacity 0.4s ease;
  -webkit-transition-delay: 0s,0s,0s;
  transition-delay: 0s,0s,0s;
}

.c3[aria-hidden='true'] {
  visibility: hidden;
  opacity: 0;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-transition-delay: 0.4s,0s,0s;
  transition-delay: 0.4s,0s,0s;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

@media (prefers-reduced-motion:reduce) {
  .c3 {
    -webkit-animation: none;
    animation: none;
    -webkit-animation: none;
  }
}

<div
    className="c0"
  >
    <div
      className="c1"
    >
      <button
        aria-expanded={false}
        className="c2"
        onClick={[Function]}
        role="tab"
      >
        Header
      </button>
      <div
        aria-hidden={true}
        className="c3"
      >
        <div
          className="c4"
        >
          Content
        </div>
      </div>
    </div>
  </div>,
  .c2 {
  display: block;
  margin: 0;
  width: 100%;
  padding: 1.25rem;
  min-height: 1.875rem;
  box-sizing: border-box;
  overflow: visible;
  background: transparent;
  border: 0.125rem solid #eee;
  border-radius: 0.1875rem;
  color: inherit;
  font: inherit;
  text-align: inherit;
  line-height: normal;
  -webkit-appearance: none;
  cursor: pointer;
  outline: none;
}

.c2[aria-expanded='true'] {
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
}

.c0 {
  margin-bottom: 0rem;
}

.c4 {
  margin-top: 1.875rem;
  margin-bottom: 1.875rem;
}

.c3 {
  box-sizing: border-box;
  visibility: visible;
  overflow: hidden;
  -webkit-flex-basis: NaNrem;
  -ms-flex-preferred-size: NaNrem;
  flex-basis: NaNrem;
  background-color: #f6f6f6;
  border: 0.125rem solid #eee;
  border-top: 0;
  border-bottom-left-radius: 0.1875rem;
  border-bottom-right-radius: 0.1875rem;
  opacity: 1;
  padding: 0 1.875rem;
  -webkit-transition: visibility 0s ease,flex-basis 0.4s ease,opacity 0.4s ease;
  transition: visibility 0s ease,flex-basis 0.4s ease,opacity 0.4s ease;
  -webkit-transition-delay: 0s,0s,0s;
  transition-delay: 0s,0s,0s;
}

.c3[aria-hidden='true'] {
  visibility: hidden;
  opacity: 0;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-transition-delay: 0.4s,0s,0s;
  transition-delay: 0.4s,0s,0s;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

@media (prefers-reduced-motion:reduce) {
  .c3 {
    -webkit-animation: none;
    animation: none;
    -webkit-animation: none;
  }
}

<div
    className="c0"
  >
    <div
      className="c1"
    >
      <button
        aria-expanded={false}
        className="c2"
        onClick={[Function]}
        role="tab"
      >
        Header
      </button>
      <div
        aria-hidden={true}
        className="c3"
      >
        <div
          className="c4"
        >
          Content
        </div>
      </div>
    </div>
  </div>,
]
`;
